T#52: Crear vista de inicio de sesion para asistentes y doctores

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,6 +35,12 @@ body {
     min-height:1200px;
 }
 
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+
 .text-center {
     text-align:center;
 }
