--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,58 @@
 .page_container {
-    margin-top: 80px;
+    padding-top: 80px;
+}
+.primary, .secundary {
+    padding: 50px 0 50px 0;
 }
 
-.jumbotron {
-    border-radius: 6px;
+.footer  {
+    padding: 30px 0 20px 0;
+}
+
+.primary {
+    background-color: #f9f9f9;
+}
+
+.secundary {
+    background-color: #e0e0e0;
+}
+
+.footer {
+    background-color: #011b20;
+    color: #ededed;
+}
+
+#header_title {
+    color: #dd0000;
+    font-size: 600%;
+}
+
+/*================
+SLIDER DEL HOME SCREEN
+================*/
+
+#home_slides {
+    color: #fff;
+}
+
+.header_home {
+    margin-top: 30px;
+    background-size: 100%;
+}
+
+.item {
+    height: 600px;
+    background-size: 100%;
+}
+
+img.header_image_full_vertical {
+    height: 600px;
+}
+
+img.header_image_full_horizontal {
+    width: 100%;
+}
+
+.app_badge{
+    width: 40%;
 }
